--- a/tab-3/seffaflik-raporu.html
+++ b/tab-3/seffaflik-raporu.html
@@ -33,7 +33,7 @@
 
 <body>
     <!-- Navbar Start -->
-      <nav class="navbar navbar-expand-lg bg-white navbar-light shadow-sm py-3 py-lg-0 px-3 px-lg-0">
+           <nav class="navbar navbar-expand-lg bg-white navbar-light shadow-sm py-3 py-lg-0 px-3 px-lg-0">
         <a href="../index.html" class="navbar-brand ms-lg-5">
 			<img class="img-fluid rounded" style="max-width: 250px;height: 1cm;" src="../img/sirketlogoakc_transparent.png" alt="">
         </a>
@@ -47,29 +47,17 @@
       <a href="../tab-1/hakkimizda.html" class="nav-link" >Hakkımızda</a>
 </div>
 </div>
-  		<div class="nav-item dropdown">
-							<div class="d-flex justify-content-between">
-      <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Hizmetlerimiz</a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" aria-controls="submenuCollapse2" aria-expanded="false" aria-label="Toggle submenu">
-  <span class="navbar-toggler-icon"></span>
-</button>
-</div>
-				
-                    <div class="dropdown-menu m-0"  id="submenuCollapse2">
-                        <a href="../tab-2/denetim-ve-guvence.html" class="dropdown-item">Denetim ve Güvence</a>
+				   <div class="nav-item dropdown">
+                    <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Vergi Danışmanlığı</a>
+                    <div class="dropdown-menu m-0">
+                         <a href="../tab-2/denetim-ve-guvence.html" class="dropdown-item">Denetim ve Güvence</a>
                         <a href="../tab-2/vergi-danismanligi.html" class="dropdown-item">Vergi Danışmanlığı</a>
                         <a href="../tab-2/finansal-danismanlik.html" class="dropdown-item">Finansal Danışmanlık</a>
                     </div>
                 </div>
-						<div class="nav-item dropdown">
-							<div class="d-flex justify-content-between">
-      <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Duyurular</a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" aria-controls="submenuCollapse2" aria-expanded="false" aria-label="Toggle submenu">
-  <span class="navbar-toggler-icon"></span>
-</button>
-</div>
-				
-                    <div class="dropdown-menu m-0"  id="submenuCollapse2">
+					   <div class="nav-item dropdown">
+                    <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Duyurular</a>
+                    <div class="dropdown-menu m-0">
                         <a href="../tab-3/bagimsiz-denetim-duyurulari.html" class="dropdown-item">Bağımsız Denetim Duyuruları</a>
                         <a href="../tab-3/vergi-sirkuleri.html" class="dropdown-item">Vergi Sirkülerleri</a>
                         <a href="../tab-3/seffaflik-raporu.html" class="dropdown-item">Şeffaflık Raporu</a>
@@ -105,49 +93,7 @@
     <!-- Hero End -->
 
     <!-- Blog Start -->
-    <div class="container py-5 wow fadeInUp" data-wow-delay="0.1s">
-	        <div class="row g-5">
-            <div class="container">
-  <div class="image-container">
-    <img class="img-fluid" src="../img/tab3/İs-ve-sosyal-guvenlik-2.png" alt="">
-    <div class="overlay"></div>
-    <div class="text">
-      <h2 style ="color: honeydew;font-family: 'Open Sans';">Interim CFO</h2>
-	  <p style ="color: honeydew;font-family: 'Open Sans';">Başarılı bir finansal yönetim sizi gündelik finansal aksaklıklardan korurken, iş geliştirmeye ve kurumsal gelişime odaklanmanıza imkan tanır.</p>
-    </div>
-  </div>
-</div>
-        </div>
-		</br>
-		 <div class="row g-5">
-            <div class="col-lg-12">
-                <!-- Blog Detail Start -->
-                <div class="mb-5" style="text-align: left;">
-				<hr style =" border: none; /* Çizginin kenarlık olmamasını sağlar */
-            height: 3px; /* Çizginin yüksekliği */
-            background-color: black; /* Çizginin arka plan rengi */">
-                    <h2 style="text-align: center;">Hizmet Kapsamı</h2>
-					<div class="vc_row wpb_row vc_inner vc_row-fluid vc_custom_1634005714433"><div class="wpb_column vc_column_container vc_col-sm-8 vc_col-lg-offset-2"><div class="vc_column-inner"><div class="wpb_wrapper">
-	<div class="wpb_text_column wpb_content_element  vc_custom_1636650504565">
-		<div class="wpb_wrapper">
-<p>Şirketinizin büyüme evresine geçişiyle birlikte, finansal yönetim ve finansal planlama konuları ana gündeminize almanız gereken başlıklar. Başarılı bir finansal yönetim sizi gündelik finansal aksaklıklardan korurken, iş geliştirmeye ve kurumsal gelişime odaklanmanıza imkan tanır.</p>
-<p>Finans süreçlerini yürütürken yüksek verimlilik elde etmek için bu alanda tecrübeli bir CFO ile çalışma ihtiyacı doğar, ancak yüksek gelir ve yan hak beklentileri nedeniyle değerli bilgi birikimi olan profesyonelleri şirket bünyesinde barındırmak oldukça maliyetli olabilmektedir.</p>
-<p>AKC DENETİM, sağladığı interim CFO hizmeti ile;</p>
-<p><img decoding="async" class="alignnone wp-image-5061" src="../img/madde.png" alt="" width="21" height="21"> Personel maliyeti avantajı sağlar.</p>
-<p><img decoding="async" class="alignnone wp-image-5061" src="../img/madde.png" alt="" width="21" height="21"> Şirketinizin finansal yönetimine rehberlik eder.</p>
-<p><img decoding="async" class="alignnone wp-image-5061" src="../img/madde.png" alt="" width="21" height="21"> İşletme sermayesi ihtiyacı için kaynak planlamasını yönetir.</p>
-<p><img decoding="async" class="alignnone wp-image-5061" src="../img/madde.png" alt="" width="21" height="21"> Mali verileriniz üzerinde yapılan düzeltme ve sınıflamalarla finansal tablolarınızda iyileşme sağlar.</p>
-<p><img decoding="async" class="alignnone wp-image-5061" src="../img/madde.png" alt="" width="21" height="21"> Finansal raporlama alt yapısını oluşturur, geliştirir.</p>
-<p><img decoding="async" class="alignnone wp-image-5061" src="../img/madde.png" alt="" width="21" height="21"> Faaliyet sonuçlarını sektör ortalamaları ile karşılaştırır ve raporlar.</p>
-<p><img decoding="async" class="alignnone wp-image-5061" src="../img/madde.png" alt="" width="21" height="21"> Finansal bilgi danışmanlığı sağlar.</p>
-		</div>
-	</div>
-<div class=" ubtn-ctn-center "><a class="ubtn-link ult-adjust-bottom-margin ubtn-center ubtn-large " href="../tab-6/iletisim.html" title="İletişim"><button type="button" id="ubtn-5812" class="ubtn ult-adjust-bottom-margin ult-responsive ubtn-large ubtn-no-hover-bg  none  ubtn-center   tooltip-64627dd91b8e7" data-hover="" data-border-color="" data-bg="#e23456" data-hover-bg="#c42d55" data-border-hover="" data-shadow-hover="" data-shadow-click="none" data-shadow="" data-shd-shadow="" data-ultimate-target="#ubtn-5812" data-responsive-json-new="{&quot;font-size&quot;:&quot;desktop:14px;&quot;,&quot;line-height&quot;:&quot;desktop:20px;&quot;}" style="font-weight:bold;border-radius:50px;border-width:px;border-color:;border-style:solid;background: #e23456;color: #ffffff;"><span class="ubtn-hover" style="background-color:#c42d55"></span><span class="ubtn-data ubtn-text ">İletişime Geç</span></button></a></div></div></div></div></div>
-                </div>
-                <!-- Blog Detail End -->
-            </div>
-        </div>
-			</div>
+   
     <!-- Blog End -->
 
 
