--- a/tab-1/hakkimizda.html
+++ b/tab-1/hakkimizda.html
@@ -47,29 +47,17 @@
       <a href="../tab-1/hakkimizda.html" class="nav-link" >Hakkımızda</a>
 </div>
 </div>
-  		<div class="nav-item dropdown">
-							<div class="d-flex justify-content-between">
-      <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Hizmetlerimiz</a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" aria-controls="submenuCollapse2" aria-expanded="false" aria-label="Toggle submenu">
-  <span class="navbar-toggler-icon"></span>
-</button>
-</div>
-				
-                    <div class="dropdown-menu m-0"  id="submenuCollapse2">
-                        <a href="../tab-2/denetim-ve-guvence.html" class="dropdown-item">Denetim ve Güvence</a>
+				   <div class="nav-item dropdown">
+                    <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Vergi Danışmanlığı</a>
+                    <div class="dropdown-menu m-0">
+                         <a href="../tab-2/denetim-ve-guvence.html" class="dropdown-item">Denetim ve Güvence</a>
                         <a href="../tab-2/vergi-danismanligi.html" class="dropdown-item">Vergi Danışmanlığı</a>
                         <a href="../tab-2/finansal-danismanlik.html" class="dropdown-item">Finansal Danışmanlık</a>
                     </div>
                 </div>
-						<div class="nav-item dropdown">
-							<div class="d-flex justify-content-between">
-      <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Duyurular</a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" aria-controls="submenuCollapse2" aria-expanded="false" aria-label="Toggle submenu">
-  <span class="navbar-toggler-icon"></span>
-</button>
-</div>
-				
-                    <div class="dropdown-menu m-0"  id="submenuCollapse2">
+					   <div class="nav-item dropdown">
+                    <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Duyurular</a>
+                    <div class="dropdown-menu m-0">
                         <a href="../tab-3/bagimsiz-denetim-duyurulari.html" class="dropdown-item">Bağımsız Denetim Duyuruları</a>
                         <a href="../tab-3/vergi-sirkuleri.html" class="dropdown-item">Vergi Sirkülerleri</a>
                         <a href="../tab-3/seffaflik-raporu.html" class="dropdown-item">Şeffaflık Raporu</a>
