--- a/tab-5/iletisim.html
+++ b/tab-5/iletisim.html
@@ -33,7 +33,7 @@
 
 <body>
     <!-- Navbar Start -->
-        <nav class="navbar navbar-expand-lg bg-white navbar-light shadow-sm py-3 py-lg-0 px-3 px-lg-0">
+              <nav class="navbar navbar-expand-lg bg-white navbar-light shadow-sm py-3 py-lg-0 px-3 px-lg-0">
         <a href="../index.html" class="navbar-brand ms-lg-5">
 			<img class="img-fluid rounded" style="max-width: 250px;height: 1cm;" src="../img/sirketlogoakc_transparent.png" alt="">
         </a>
@@ -47,29 +47,17 @@
       <a href="../tab-1/hakkimizda.html" class="nav-link" >Hakkımızda</a>
 </div>
 </div>
-  		<div class="nav-item dropdown">
-							<div class="d-flex justify-content-between">
-      <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Hizmetlerimiz</a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" aria-controls="submenuCollapse2" aria-expanded="false" aria-label="Toggle submenu">
-  <span class="navbar-toggler-icon"></span>
-</button>
-</div>
-				
-                    <div class="dropdown-menu m-0"  id="submenuCollapse2">
-                        <a href="../tab-2/denetim-ve-guvence.html" class="dropdown-item">Denetim ve Güvence</a>
+				   <div class="nav-item dropdown">
+                    <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Vergi Danışmanlığı</a>
+                    <div class="dropdown-menu m-0">
+                         <a href="../tab-2/denetim-ve-guvence.html" class="dropdown-item">Denetim ve Güvence</a>
                         <a href="../tab-2/vergi-danismanligi.html" class="dropdown-item">Vergi Danışmanlığı</a>
                         <a href="../tab-2/finansal-danismanlik.html" class="dropdown-item">Finansal Danışmanlık</a>
                     </div>
                 </div>
-						<div class="nav-item dropdown">
-							<div class="d-flex justify-content-between">
-      <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Duyurular</a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" aria-controls="submenuCollapse2" aria-expanded="false" aria-label="Toggle submenu">
-  <span class="navbar-toggler-icon"></span>
-</button>
-</div>
-				
-                    <div class="dropdown-menu m-0"  id="submenuCollapse2">
+					   <div class="nav-item dropdown">
+                    <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Duyurular</a>
+                    <div class="dropdown-menu m-0">
                         <a href="../tab-3/bagimsiz-denetim-duyurulari.html" class="dropdown-item">Bağımsız Denetim Duyuruları</a>
                         <a href="../tab-3/vergi-sirkuleri.html" class="dropdown-item">Vergi Sirkülerleri</a>
                         <a href="../tab-3/seffaflik-raporu.html" class="dropdown-item">Şeffaflık Raporu</a>
