RESİMLERDEKİ YAZILAR COMMANDLENDİ.

--- a/tab-2/denetim-ve-guvence.html
+++ b/tab-2/denetim-ve-guvence.html
@@ -101,7 +101,7 @@
     <div class="overlay"></div>
     <div class="text">
       <h2 style ="color: honeydew;font-family: 'Open Sans';">Denetim ve Güvence</h2>
-	  <p style ="color: honeydew;font-family: 'Open Sans';">Denetim ve güvence hizmetlerimizle iş hayatında ve toplumda güven oluşturmaya, kontrol mekanizmaları geliştirmeye , finansal sorunlara çözüm üretmeye destek oluyoruz</p>
+	  <!-- <p style ="color: honeydew;font-family: 'Open Sans';">Denetim ve güvence hizmetlerimizle iş hayatında ve toplumda güven oluşturmaya, kontrol mekanizmaları geliştirmeye , finansal sorunlara çözüm üretmeye destek oluyoruz</p> -->
     </div>
   </div>
 </div>
