--- a/tab-2/finansal-danismanlik.html
+++ b/tab-2/finansal-danismanlik.html
@@ -101,7 +101,7 @@
     <div class="overlay"></div>
     <div class="text">
       <h2 style ="color: honeydew;font-family: 'Open Sans';">Finans Hizmetleri</h2>
-	  <p style ="color: honeydew;font-family: 'Open Sans';">Finansal süreçlerinizin yönetimi, raporlaması, kontrolü ve geliştirilmesi konusunda çeşitli hizmetler sunuyoruz</p>
+	  <!-- <p style ="color: honeydew;font-family: 'Open Sans';">Finansal süreçlerinizin yönetimi, raporlaması, kontrolü ve geliştirilmesi konusunda çeşitli hizmetler sunuyoruz</p> -->
     </div>
   </div>
 </div>
