--- a/tab-2/vergi-danismanligi.html
+++ b/tab-2/vergi-danismanligi.html
@@ -101,7 +101,7 @@
     <div class="overlay"></div>
     <div class="text">
       <h2 style ="color: honeydew;font-family: 'Open Sans';">Vergi Danışmanlığı</h2>
-	  <p style ="color: honeydew;font-family: 'Open Sans';">Vergi alanında sahip olduğumuz yerel ve global bilgi birikimini özgün çözümlerimizle sunarak, şirketinizin verimliliğinin arttırılmasına ve risklerinin azaltılmasına katkı sağlıyoruz</p>
+	  <!-- <p style ="color: honeydew;font-family: 'Open Sans';">Vergi alanında sahip olduğumuz yerel ve global bilgi birikimini özgün çözümlerimizle sunarak, şirketinizin verimliliğinin arttırılmasına ve risklerinin azaltılmasına katkı sağlıyoruz</p> -->
     </div>
   </div>
 </div>
