--- a/tab-2/denetim-ve-guvence.html
+++ b/tab-2/denetim-ve-guvence.html
@@ -48,7 +48,7 @@
 </div>
 </div>
 				   <div class="nav-item dropdown">
-                    <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Vergi Danışmanlığı</a>
+                    <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Hizmetlerimiz</a>
                     <div class="dropdown-menu m-0">
                          <a href="../tab-2/denetim-ve-guvence.html" class="dropdown-item">Denetim ve Güvence</a>
                         <a href="../tab-2/vergi-danismanligi.html" class="dropdown-item">Vergi Danışmanlığı</a>
