--- a/tab-1/hakkimizda.html
+++ b/tab-1/hakkimizda.html
@@ -53,6 +53,7 @@
                          <a href="../tab-2/denetim-ve-guvence.html" class="dropdown-item">Denetim ve Güvence</a>
                         <a href="../tab-2/vergi-danismanligi.html" class="dropdown-item">Vergi Danışmanlığı</a>
                         <a href="../tab-2/finansal-danismanlik.html" class="dropdown-item">Finansal Danışmanlık</a>
+						<a href="../tab-2/enflasyon-muhasebesi.html" class="dropdown-item">Enflasyon Muhasebesi</a>
                     </div>
                 </div>
 					   <div class="nav-item dropdown">
