--- a/tab-2/enflasyon-muhasebesi.html
+++ b/tab-2/enflasyon-muhasebesi.html
@@ -33,7 +33,7 @@
 
 <body>
     <!-- Navbar Start -->
-           <nav class="navbar navbar-expand-lg bg-white navbar-light shadow-sm py-3 py-lg-0 px-3 px-lg-0">
+          <nav class="navbar navbar-expand-lg bg-white navbar-light shadow-sm py-3 py-lg-0 px-3 px-lg-0">
         <a href="../index.html" class="navbar-brand ms-lg-5">
 			<img class="img-fluid rounded" style="max-width: 250px;height: 1cm;" src="../img/sirketlogoakc_transparent.png" alt="">
         </a>
@@ -94,12 +94,54 @@
     <!-- Hero End -->
 
     <!-- Blog Start -->
-  
+    <div class="container py-5 wow fadeInUp" data-wow-delay="0.1s">
+	        <div class="row g-5">
+            <div class="container">
+  <div class="image-container">
+    <img class="img-fluid" src="../img/tab2/Vergi-Danismanligi-Kategori-scaled.jpg" alt="">
+    <div class="overlay"></div>
+    <div class="text">
+      <h2 style ="color: honeydew;font-family: 'Open Sans';">Enflasyon Muhasebesi</h2>
+	  <!-- <p style ="color: honeydew;font-family: 'Open Sans';">Vergi alanında sahip olduğumuz yerel ve global bilgi birikimini özgün çözümlerimizle sunarak, şirketinizin verimliliğinin arttırılmasına ve risklerinin azaltılmasına katkı sağlıyoruz</p> -->
+    </div>
+  </div>
+</div>
+        </div>
+		</br>
+		 <div class="row g-5">
+            <div class="col-lg-12">
+                <!-- Blog Detail Start -->
+                <div class="mb-5" style="text-align: left;">
+				<hr style =" border: none; /* Çizginin kenarlık olmamasını sağlar */
+            height: 3px; /* Çizginin yüksekliği */
+            background-color: black; /* Çizginin arka plan rengi */">
+                    <h2 style="text-align: center;">Hizmet Kapsamı</h2>
+					<div class="vc_row wpb_row vc_inner vc_row-fluid vc_custom_1634005714433"><div class="wpb_column vc_column_container vc_col-sm-8 vc_col-lg-offset-2"><div class="vc_column-inner"><div class="wpb_wrapper">
+	<div class="wpb_text_column wpb_content_element  vc_custom_1636650504565">
+		<div class="wpb_wrapper">
+<p>Türkiye Finansal Raporlama Standartları ile Büyük ve Orta Boy İşletmeler İçin Finansal Raporlama Standardı (BOBİ FRS) uygulayan işletmelerin <b>31 Aralık 2023</b> tarihinde veya sonrasında sona eren yıllık raporlama dönemine ait finansal tablolarının
+ “Türkiye Muhasebe Standardı 29 Yüksek Enflasyonlu Ekonomilerde Finansal Raporlama” ile “BOBİ FRS Bölüm 25 Yüksek Enflasyonlu Ekonomilerde Finansal Raporlama”da yer alan ilgili muhasebe ilkelerine uygun olarak enflasyon etkisine göre düzeltilerek sunulması gerekmektedir.</p>
+ </br>
+<p> AKC Bağımsız Denetim A.Ş. olarak, profesyonel kadromuz ile IFRS enflasyon muhasebesi danışmanlığı hizmeti vermekteyiz.</p>
+</br>
+<p> Konu ile alakalı daha fazla bilgi edinmek için aşağıdaki irtibat numaralarından bizlere ulaşabilirsiniz</p>
+</br>
+<p> Hüseyin Akcan, Ortak</p>
+<p> +90 (212) 447 64 60</p>
+<p> info@akcdenetim.com</p>
+		</div>
+	</div>
+<div class=" ubtn-ctn-center "><a class="ubtn-link ult-adjust-bottom-margin ubtn-center ubtn-large " href="../tab-5/iletisim.html" title="İletişim"><button type="button" id="ubtn-5812" class="ubtn ult-adjust-bottom-margin ult-responsive ubtn-large ubtn-no-hover-bg  none  ubtn-center   tooltip-64627dd91b8e7" data-hover="" data-border-color="" data-bg="#e23456" data-hover-bg="#c42d55" data-border-hover="" data-shadow-hover="" data-shadow-click="none" data-shadow="" data-shd-shadow="" data-ultimate-target="#ubtn-5812" data-responsive-json-new="{&quot;font-size&quot;:&quot;desktop:14px;&quot;,&quot;line-height&quot;:&quot;desktop:20px;&quot;}" style="font-weight:bold;border-radius:50px;border-width:px;border-color:;border-style:solid;background: #e23456;color: #ffffff;"><span class="ubtn-hover" style="background-color:#c42d55"></span><span class="ubtn-data ubtn-text ">İletişime Geç</span></button></a></div></div></div></div></div>
+                </div>
+                <!-- Blog Detail End -->
+            </div>
+        </div>
+			</div>
     <!-- Blog End -->
 
 
     <!-- Footer Start -->
-       <div class="container-fluid bg-dark text-light mt-5 py-5 wow fadeInUp" data-wow-delay="0.1s">
+    <div class="container-fluid bg-dark text-light mt-5 py-5 wow fadeInUp" data-wow-delay="0.1s">
         <div class="container pt-5">
             <div class="row g-5">
                 <div class="col-lg-6 col-md-6">
