--- a/index-en.html
+++ b/index-en.html
@@ -44,34 +44,34 @@
   <div class="navbar-nav mx-auto py-0">
   				<div class="dropdown">
 										<div class="d-flex justify-content-between">
-      <a href="tab-1/hakkimizda.html" class="nav-link" >Hakkımızda</a>
+      <a href="tab-1/hakkimizda.html" class="nav-link" >About Us</a>
 </div>
 </div>
 				   <div class="nav-item dropdown">
-                    <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Hizmetlerimiz</a>
+                    <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Services</a>
                     <div class="dropdown-menu m-0">
-                        <a href="tab-2/denetim-ve-guvence.html" class="dropdown-item">Denetim ve Güvence</a>
-                        <a href="tab-2/vergi-danismanligi.html" class="dropdown-item">Vergi Danışmanlığı</a>
-                        <a href="tab-2/finansal-danismanlik.html" class="dropdown-item">Finansal Danışmanlık</a>
-						<a href="tab-2/enflasyon-muhasebesi.html" class="dropdown-item">Enflasyon Muhasebesi</a>
+                        <a href="tab-2/denetim-ve-guvence.html" class="dropdown-item">Audit and Assurance Services</a>
+                        <a href="tab-2/vergi-danismanligi.html" class="dropdown-item">Tax Services</a>
+                        <a href="tab-2/finansal-danismanlik.html" class="dropdown-item">Financial Consulting</a>
+						<a href="tab-2/enflasyon-muhasebesi.html" class="dropdown-item">IAS 29 Accounting</a>
                     </div>
                 </div>
 					   <div class="nav-item dropdown">
-                    <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Duyurular</a>
+                    <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Newsroom</a>
                     <div class="dropdown-menu m-0">
-                        <a href="tab-3/bagimsiz-denetim-duyurulari.html" class="dropdown-item">Bağımsız Denetim Duyuruları</a>
-                        <a href="tab-3/vergi-sirkuleri.html" class="dropdown-item">Vergi Sirkülerleri</a>
-                        <a href="tab-3/seffaflik-raporu.html" class="dropdown-item">Şeffaflık Raporu</a>
+                        <a href="tab-3/bagimsiz-denetim-duyurulari.html" class="dropdown-item">Audit</a>
+                        <a href="tab-3/vergi-sirkuleri.html" class="dropdown-item">Tax</a>
+                        <a href="tab-3/seffaflik-raporu.html" class="dropdown-item">Transparency Report</a>
                     </div>
                 </div>
 				  				<div class="dropdown">
 										<div class="d-flex justify-content-between">
-      <a href="tab-4/kariyer-firsatlari.html" class="nav-link" >Kariyer Fırsatları</a>
+      <a href="tab-4/kariyer-firsatlari.html" class="nav-link" >Careers</a>
 </div>
 </div>
   				<div class="dropdown">
 										<div class="d-flex justify-content-between">
-      <a href="tab-5/iletisim.html" class="nav-link" >İletişim</a>
+      <a href="tab-5/iletisim.html" class="nav-link" >Contact US</a>
 </div>
 </div>
 
@@ -100,8 +100,8 @@
                     <img class="w-100" src="img/anasayfa.jpg" alt="Image">
                     <div class="carousel-caption d-flex flex-column align-items-center justify-content-center">
                         <div class="p-3" style="max-width: 900px;">
-                             <h5 class="text-white text-uppercase animated bounceInDown">AKC Denetim</h5>
-                             <h1 class="display-1 text-white mb-md-4 animated zoomIn">Geleceğe Güvenle…</h1> 
+                             <h5 class="text-white text-uppercase animated bounceInDown">AKC</h5>
+                             <h1 class="display-1 text-white mb-md-4 animated zoomIn">Trust the Future</h1> 
                             <!-- <a href="" class="btn btn-primary py-md-3 px-md-5 me-3 animated slideInLeft">Get Quote</a> -->
                             <!-- <a href="" class="btn btn-secondary py-md-3 px-md-5 animated slideInRight">Contact Us</a> -->
                         </div>
@@ -111,8 +111,8 @@
                     <img class="w-100" src="img/anasayfa1.jpg" alt="Image">
                     <div class="carousel-caption d-flex flex-column align-items-center justify-content-center">
                         <div class="p-3" style="max-width: 900px;">
-                             <h5 class="text-white text-uppercase animated bounceInDown">AKC Denetim</h5>
-                             <h1 class="display-1 text-white mb-md-4 animated zoomIn">Kalite Odaklı…</h1> 
+                             <h5 class="text-white text-uppercase animated bounceInDown">AKC</h5>
+                             <h1 class="display-1 text-white mb-md-4 animated zoomIn">Quality Oriented</h1> 
                             <!-- <a href="" class="btn btn-primary py-md-3 px-md-5 me-3 animated slideInLeft">Get Quote</a> -->
                             <!-- <a href="" class="btn btn-secondary py-md-3 px-md-5 animated slideInRight">Contact Us</a> -->
                         </div>
@@ -122,8 +122,8 @@
                     <img class="w-100" src="img/calculator.png" alt="Image">
                     <div class="carousel-caption d-flex flex-column align-items-center justify-content-center">
                         <div class="p-3" style="max-width: 900px;">
-                            <h5 class="text-white text-uppercase animated bounceInDown">AKC Denetim</h5>
-                             <h1 class="display-1 text-white mb-md-4 animated zoomIn">Şeffaf ve Güvenilir.</h1>
+                            <h5 class="text-white text-uppercase animated bounceInDown">AKC</h5>
+                             <h1 class="display-1 text-white mb-md-4 animated zoomIn">Transparent and Reliable</h1>
                             <!-- <a href="" class="btn btn-primary py-md-3 px-md-5 me-3 animated slideInLeft">Get Quote</a> -->
                             <!-- <a href="" class="btn btn-secondary py-md-3 px-md-5 animated slideInRight">Contact Us</a> -->
                         </div>
@@ -207,15 +207,15 @@
                 <div class="col-lg-6 col-md-6">
                     <h3 class="text-white mb-4">Menü</h3>
                     <div class="d-flex flex-column justify-content-start">
-                        <a class="text-light mb-2" href="#"><i class="bi bi-arrow-right text-primary me-2"></i>Hakkımızda</a>
-                        <a class="text-light mb-2" href="#"><i class="bi bi-arrow-right text-primary me-2"></i>Hizmetlerimiz</a>
-                        <a class="text-light mb-2" href="#"><i class="bi bi-arrow-right text-primary me-2"></i>Duyurular</a>
-                        <a class="text-light mb-2" href="#"><i class="bi bi-arrow-right text-primary me-2"></i>Kariyer Fırsatları</a>
-						<a class="text-light mb-2" href="#"><i class="bi bi-arrow-right text-primary me-2"></i>İletişim</a>
+                        <a class="text-light mb-2" href="#"><i class="bi bi-arrow-right text-primary me-2"></i>About Us</a>
+                        <a class="text-light mb-2" href="#"><i class="bi bi-arrow-right text-primary me-2"></i>Services</a>
+                        <a class="text-light mb-2" href="#"><i class="bi bi-arrow-right text-primary me-2"></i>Newsroom</a>
+                        <a class="text-light mb-2" href="#"><i class="bi bi-arrow-right text-primary me-2"></i>Careers</a>
+						<a class="text-light mb-2" href="#"><i class="bi bi-arrow-right text-primary me-2"></i>Contact US</a>
                     </div>
                 </div>
                 <div class="col-lg-6 col-md-6">
-                    <h3 class="text-white mb-4">İletişim</h3>
+                    <h3 class="text-white mb-4">Contact US</h3>
                     <p class="mb-2"><i class="bi bi-geo-alt text-primary me-2"></i>Başkule Plaza , İnönü Caddesi, Göztepe Mah.</p>
 					<p class="mb-2">No:122  K:8  D:35 Bağcılar/İstanbul</p>
                     <p class="mb-2"><i class="bi bi-envelope-open text-primary me-2"></i>info@akcdenetim.com</p>
