--- a/index-en.html
+++ b/index-en.html
@@ -157,8 +157,8 @@
 						<img style="width: 42% !important;" src="img/budget.png" alt="">
                             <!-- <i class="flaticon-camera d-block display-1 fw-normal text-secondary mb-3"></i> -->
                             <!-- <h5 class="text-primary mb-0">CCTV</h5> -->
-                            <h3 style="margin-top:0.5cm" class="mb-3">DENETİM VE GUVENCE</h3>
-                            <p>Bağımsız Denetim ile finansal tablo okuyucularına güvenilir, kaliteli ve şeffaf bir hizmet sunabilmek adına mesleki özen ve titizlikle çalışıyoruz</p>
+                            <h3 style="margin-top:0.5cm" class="mb-3">AUDIT AND ASSURANCE SERVICES</h3>
+                            <p>We work with professional care and meticulousness in order to provide a reliable, high-quality and transparent service to financial statement readers through Independent Audit.</p>
                             <!-- <a href="">Read More<i class="bi bi-arrow-right ms-2"></i></a> -->
                         </div>
                     </div>
@@ -167,8 +167,9 @@
                     <div class="service-item bg-light border-bottom border-5 border-primary rounded">
                         <div class="position-relative p-5">
 						<img style="width: 42% !important;" src="img/taxes.png" alt="">
-                            <h3 style="margin-top:0.5cm" class="mb-3">VERGİ YÖNETİMİ DANIŞMANLIĞI</h3>
-                            <p>Vergi Yönetimi danışmanlığı ile mevzuatın tanıdığı haklardan azami ölçüde yararlanarak vergi maliyetlerinizi yönetiyoruz.</p>
+                            <h3 style="margin-top:0.5cm" class="mb-3">TAX MANAGEMENT CONSULTANCY SERVICES</h3>
+                            <p>With Tax Management consultancy, we manage your tax costs by making maximum use of the rights granted by the law.</p>
+							</br>
                         </div>
                     </div>
                 </a>
@@ -178,8 +179,9 @@
 						<img style="width: 42% !important;" src="img/financial.png" alt="">
                             <!-- <i class="flaticon-security-system d-block display-1 fw-normal text-secondary mb-3"></i> -->
                             <!-- <h5 class="text-primary mb-0">CCTV</h5> -->
-                            <h3 style="margin-top:0.5cm" class="mb-3">FİNANSAL DANIŞMANLIK</h3>
-                            <p>Finansal Danışmanlık ile Şirketinizin finansal yapısını analiz ederek en doğru stratejilerle geleceğe taşıyoruz.</p>
+                            <h3 style="margin-top:0.5cm" class="mb-3">FINANCIAL CONSULTING</h3>
+                            <p>With Financial Consultancy, we analyze the financial structure of your company and carry it to the future with the most accurate strategies.</p>
+							</br>
 							</br>
                             <!-- <a href="">Read More<i class="bi bi-arrow-right ms-2"></i></a> -->
                         </div>
